[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "upstream-fix-gate"
version = "0.2.0"
description = "Decide GO/STOP before contributing: has upstream already shipped a fix for this issue?"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "fooSynaptic" }]
keywords = ["github", "oss", "contribution", "changelog", "release"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
upstream-fix-gate = "upstream_fix_gate.cli:main"
ufg = "upstream_fix_gate.cli:main"

[project.urls]
Homepage = "https://github.com/fooSynaptic/upstream-fix-gate"
Repository = "https://github.com/fooSynaptic/upstream-fix-gate"

[tool.setuptools.packages.find]
where = ["."]
include = ["upstream_fix_gate*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
